--- a/templates/layout/content/workspace.twig
+++ b/templates/layout/content/workspace.twig
@@ -26,12 +26,12 @@
 
 
     <script>window.jQuery || document.write('<script src="{{ base_path() }}/js/jquery-2.0.0.min.js">\x3C/script>')</script>
+    <!--<script src="https://code.jquery.com/ui/1.10.3/jquery-ui.min.js" integrity="sha256-lnH4vnCtlKU2LmD0ZW1dU7ohTTKrcKP50WA9fa350cE="crossorigin="anonymous"></script>-->
+
+
+    <!--<script src="https://code.jquery.com/jquery-2.0.0.min.js" integrity="sha256-1IKHGl6UjLSIT6CXLqmKgavKBXtr0/jJlaGMEkh+dhw="crossorigin="anonymous"></script>-->
     <script src="https://code.jquery.com/ui/1.10.3/jquery-ui.min.js" integrity="sha256-lnH4vnCtlKU2LmD0ZW1dU7ohTTKrcKP50WA9fa350cE="crossorigin="anonymous"></script>
 
-    <!--
-    <script src="https://code.jquery.com/jquery-2.0.0.min.js" integrity="sha256-1IKHGl6UjLSIT6CXLqmKgavKBXtr0/jJlaGMEkh+dhw="crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/ui/1.10.3/jquery-ui.min.js" integrity="sha256-lnH4vnCtlKU2LmD0ZW1dU7ohTTKrcKP50WA9fa350cE="crossorigin="anonymous"></script>
-    -->
 
     <script src="{{ base_path() }}/js/common.js"></script>
 
