--- a/templates/layout/partials/footer-signin.twig
+++ b/templates/layout/partials/footer-signin.twig
@@ -1,3 +1,3 @@
-<footer class="w3-container w3-light-grey footer">
+<footer class="w3-container w3-light-grey footer-signin">
     <h5 class="w3-right" style="font-size:12px;">&#169; 2021 Ready Resources Pty Ltd</h5>
 </footer>
