--- a/public/css/layout-fixed.css
+++ b/public/css/layout-fixed.css
@@ -543,9 +543,16 @@ div.total-box-generate {
     position: absolute;
     left:80px;
     bottom: 0;
+    width:calc(100% - 80px);
+    height: 60px;
+    border-top:1px solid #CCCCCC;
+}
+
+.footer-signin {
+    position: absolute;
+    bottom: 0;
     width: 100%;
     height: 60px;
-    /*background-color: #f5f5f5;*/
     border-top:1px solid #CCCCCC;
 }
 
@@ -685,19 +692,19 @@ table#workspace-table th:nth-child(2){
 }
 
 table#workspace-table th:nth-child(3){
-    width:8%;
+    width:6%;
 }
 
 table#workspace-table th:nth-child(4){
-    width:7%;
+    width:8%;
 }
 
 table#workspace-table th:nth-child(5){
-    width:21%;
+    width:7%;
 }
 
 table#workspace-table th:nth-child(6){
-    width:12%;
+    width:9%;
 }
 
 table#workspace-table th:nth-child(7){
@@ -712,17 +719,46 @@ table#workspace-table th:nth-child(9){
     width:7%;
 }
 
+table#workspace-table th:nth-child(10){
+    width:7%;
+}
+
+table#workspace-table th:nth-child(11){
+    width:7%;
+}
+
+table#workspace-table th:nth-child(12){
+    width:6%;
+}
+
+table#workspace-table th:nth-child(13){
+    width:6%;
+}
+
+table#workspace-table th:nth-child(13){
+    width:10%;
+}
+
+table#workspace-table th:nth-child(14){
+    width:4%;
+}
+
+table#workspace-table th:nth-child(15){
+    width:4%;
+}
+
+
 th, td {
     padding:5px;
 }
 
 table#workspace-table th {
-    text-align:center;
-    border:1px solid #27447E;
+    text-align:left;
+    /*border:1px solid #27447E;*/
 }
 
 table#workspace-table td {
-    border:1px solid #CCC;
+    /*border:1px solid #CCC;*/
 }
 
 .ui-widget {
