--- a/templates/layout/content/scheduler.twig
+++ b/templates/layout/content/scheduler.twig
@@ -4,6 +4,7 @@
     <div>
         <h1 class="w3-xlarge w3-left"><b>Scheduler</b></h1>
         <button id="filter-scheduler-criteria" class="w3-bar-item w3-button w3-darkblue w3-mobile w3-right w3-medium" style="margin:0 0 10px 0;">Filter Employees</button>
+        <button id="scheduler-swing-templates" class="w3-bar-item w3-button w3-darkblue w3-mobile w3-right w3-medium" style="margin:0 10px 10px 0;">Swing Templates</button>
         <button id="filter-scheduler-availability" class="w3-bar-item w3-button w3-darkblue w3-mobile w3-right w3-medium" style="margin:0 10px 10px 0;">Check Availability</button>
         <button id="remove-scheduler-availability" class="w3-bar-item w3-button w3-darkblue w3-mobile w3-right w3-medium" style="margin:0 10px 10px 0;">Clear Availability</button>
         <button id="set-scheduler-resources" class="w3-bar-item w3-button w3-darkblue w3-mobile w3-right w3-medium" style="margin:0 10px 10px 0;">All Employees</button>
@@ -350,6 +351,7 @@
 
     </style>
 
+    <script src="{{ base_path() }}/js/lou-multi-select-57fb8d3/js/jquery.multi-select.js"></script>
     <script src="{{ base_path() }}/js/scheduler.js"></script>
     <script src="{{ base_path() }}/js/common.js"></script>
     <script src="{{ base_path() }}/js/jquery.ui.timepicker.js"></script>
