--- a/templates/layout/main.twig
+++ b/templates/layout/main.twig
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="{{ base_path() }}/css/layout-fixed.css?v394">
     <link rel="stylesheet" href="{{ base_path() }}/css/pdf-export.css?v3">
+    <link rel="stylesheet" href="{{ base_path() }}/js/lou-multi-select-57fb8d3/css/multi-select.css?v8" media="screen" type="text/css">
 </head>
 
 <body>
