--- a/templates/layout/partials/navigation.twig
+++ b/templates/layout/partials/navigation.twig
@@ -58,6 +58,6 @@
     </div>
     <div id="toggle-sidebar-left-3" class="tooltip my-link">
         <i class="fas fa-funnel-dollar w3-xlarge"></i>
-        <span class="tooltiptext">Sales</span>
+        <span class="tooltiptext">Customers</span>
     </div>
 </div>
