--- a/public/css/layout-fixed.css
+++ b/public/css/layout-fixed.css
@@ -122,7 +122,7 @@ div.details-item {
 }
 
 div.details-notice-item {
-    margin;0px;
+    margin:0px;
     padding:3px;
     color:red;
     background-color:lightgrey;
@@ -682,7 +682,6 @@ label {
     display: block;
 }
 
-
 table#workspace-table th:nth-child(1){
     width:5%;
 }
@@ -747,7 +746,6 @@ table#workspace-table th:nth-child(15){
     width:4%;
 }
 
-
 th, td {
     padding:5px;
 }
@@ -757,9 +755,11 @@ table#workspace-table th {
     /*border:1px solid #27447E;*/
 }
 
+/*
 table#workspace-table td {
-    /*border:1px solid #CCC;*/
+    border:1px solid #CCC;
 }
+*/
 
 .ui-widget {
     font-family: Arial, Helvetica,sans-serif;
