--- a/templates/layout/content/scheduler.twig
+++ b/templates/layout/content/scheduler.twig
@@ -38,13 +38,13 @@
     <script id="booking-template" type="text/x-kendo-template">
         #
         if(bookingType == 'Off'){
-            if(resources[0].color == 'red'){
+            if(resources[0].color == '\#84F5C6'){
                 #
-                <div style="background-color:pink;">
+                <div style="background-color: \#EAFAF1;">
                 #
-            } else if (resources[0].color == 'blue'){
+            } else if (resources[0].color == '\#F7C686'){
                 #
-                <div style="background-color:lightblue;">
+                <div style="background-color: \#FDEBD0 ;">
                 #
             }
         }
