--- a/templates/layout/main.twig
+++ b/templates/layout/main.twig
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.3.0/css/all.min.css" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
-    <link rel="stylesheet" href="{{ base_path() }}/css/layout-fixed.css?v395">
+    <link rel="stylesheet" href="{{ base_path() }}/css/layout-fixed.css?v399">
     <link rel="stylesheet" href="{{ base_path() }}/css/pdf-export.css?v3">
     <link rel="stylesheet" href="{{ base_path() }}/js/lou-multi-select-57fb8d3/css/multi-select.css?v9" media="screen" type="text/css">
 </head>
@@ -90,15 +90,15 @@
                   class="w3-button w3-right w3-xlarge">&times;</span>
         </div>
         
-        <div id="batch-deletion-details" class="w3-container" style="height:400px;overflow-y:scroll;word-wrap:break-word;"></div>
+        <div id="batch-deletion-details" class="w3-container" style="max-height:450px;overflow-y:auto;word-wrap:break-word;"></div>
 
         <div class="ws-container">
             <div class="w3-center" style="display:block;padding:15px 0 15px 0;border-top:1px solid #CCC;">
                 <button style="margin-right:10px;" class="w3-button w3-darkblue" type="button" id="cancel-swing-delete">Cancel</button>
-                <button style="display:none" class="w3-button w3-darkblue" type="button" id="continue-delete-request">Continue R</button>
-                <button style="display:none" class="w3-button w3-darkblue" type="button" id="continue-delete-batch">Continue B</button>
-                <button style="display:none" class="w3-button w3-darkblue" type="button" id="continue-delete-shift">Continue S</button>
-                <button style="display:none" class="w3-button w3-darkblue" type="button" id="continue-delete-emp">Continue E</button>
+                <button style="display:none" class="w3-button w3-darkblue" type="button" id="continue-delete-request">Continue</button>
+                <button style="display:none" class="w3-button w3-darkblue" type="button" id="continue-delete-batch">Continue</button>
+                <button style="display:none" class="w3-button w3-darkblue" type="button" id="continue-delete-shift">Continue</button>
+                <button style="display:none" class="w3-button w3-darkblue" type="button" id="continue-delete-emp">Continue</button>
             </div>
         </div>
     </div> 
