--- a/templates/layout/partials/navigation.twig
+++ b/templates/layout/partials/navigation.twig
@@ -10,7 +10,7 @@
     <!--<a href="{{ url_for('user-post')}}" class="w3-bar-item w3-button">Post User</a>
     <a href="{{ url_for('pdf-test')}}" class="w3-bar-item w3-button">PDF</a>-->
 
-    <a href="{{ url_for('user-register')}}" class="w3-bar-item w3-button">Register User</a>
+    <!--<a href="{{ url_for('user-register')}}" class="w3-bar-item w3-button">Register User</a>-->
 
     {%  if user %}
 
@@ -19,8 +19,8 @@
         <div data-initials="{{ user.initials }}"></div>
         <div class="w3-dropdown-content w3-bar-block w3-card-4" style="right:0">
             <a href="" class="w3-bar-item w3-button" onclick="document.getElementById('signout').submit(); return false;">Log Out</a>
-            <a href="#" class="w3-bar-item w3-button">Link 2</a>
-            <a href="#" class="w3-bar-item w3-button">Link 3</a>
+            <!--<a href="#" class="w3-bar-item w3-button">Link 2</a>
+            <a href="#" class="w3-bar-item w3-button">Link 3</a>-->
         </div>
     </div>
 
@@ -38,10 +38,10 @@
 </form>
 
 <div class="w3-bar w3-light-grey w3-border navbar-2">
-    <a href="#" class="w3-bar-item w3-button w3-mobile">Link 1</a>
-    <a href="#" class="w3-bar-item w3-button w3-mobile">Link 2</a>
-    <input type="text" class="w3-bar-item w3-input w3-white w3-mobile" placeholder="Search..">
-    <button id="nav-2-button" class="w3-bar-item w3-button w3-darkblue w3-mobile w3-right w3-medium">Right Panel</button>
+    <!--<a href="#" class="w3-bar-item w3-button w3-mobile">Link 1</a>
+    <a href="#" class="w3-bar-item w3-button w3-mobile">Link 2</a>-->
+    <input type="text" style="margin-left:15px;" class="w3-bar-item w3-input w3-white w3-mobile" placeholder="Search..">
+    <!--<button id="nav-2-button" class="w3-bar-item w3-button w3-darkblue w3-mobile w3-right w3-medium">Right Panel</button>-->
 </div>
 
 <!-- Sidebar Left -->
