--- a/templates/layout/partials/navigation.twig
+++ b/templates/layout/partials/navigation.twig
@@ -52,6 +52,10 @@
 
 <!-- Sidebar Fixed Left -->
 <div id="fixed-sidebar-left" class="w3-sidebar w3-bar-block fixed-sidebar-left">
+    <div id="toggle-sidebar-left-1" class="tooltip my-link">
+        <i class="fas fa-bell w3-xlarge"></i>
+        <span class="tooltiptext">Notifications</span>
+    </div>
     <div id="toggle-sidebar-left-2" class="tooltip my-link">
         <i class="fas fa-user-friends w3-xlarge"></i>
         <span class="tooltiptext">Employees</span>
