--- a/templates/layout/main.twig
+++ b/templates/layout/main.twig
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <base href="{{ base_path() }}/"/>
-    <link rel="shortcut icon" href="icons/favicon.ico">
+    <link rel="shortcut icon" href="assets/favicon.ico">
     <title>{{ title|default('SLIM 4 APP') }}</title>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.3.0/css/all.min.css" crossorigin="anonymous" />
