--- a/templates/layout/content/scheduler.twig
+++ b/templates/layout/content/scheduler.twig
@@ -232,6 +232,7 @@
             id="dateTimePickerStart"
             type="text"
             data-role="datetimepicker"
+            data-culture="en-GB"
             data-interval="5"
             data-type="date"
             data-bind="value:start"
@@ -250,6 +251,7 @@
             id="dateTimePickerEnd"
             type="text"
              data-role="datetimepicker"
+             data-culture="en-GB"
              data-interval="5"
              data-type="date"
              data-bind="value:end"
