--- a/templates/layout/content/scheduler.twig
+++ b/templates/layout/content/scheduler.twig
@@ -233,6 +233,7 @@
             type="text"
             data-role="datetimepicker"
             data-culture="en-GB"
+            data-format="dd/MM/yyyy"
             data-interval="5"
             data-type="date"
             data-bind="value:start"
@@ -252,6 +253,7 @@
             type="text"
              data-role="datetimepicker"
              data-culture="en-GB"
+             data-format="dd/MM/yyyy"
              data-interval="5"
              data-type="date"
              data-bind="value:end"
